# shutdown_computer

./: .gitignore  README.md  pyproject.toml  pyvenv.cfg
src/shutdown_computer/: __init__.py  main.py
