[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "shutdown_computer"
version = "0.0.2"
authors = [
  { name="Min", email="minha05112003a@gmail.com" },
]
description = "A package shutdown computer"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/min-awm/shutdown_computer"
Issues = "https://github.com/min-awm/shutdown_computer/issues"